[project]
name = "agenticrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.15.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "numpy>=2.5.0",
    "pillow>=12.3.0",
    "psycopg2",
    "pypdf>=6.14.2",
    "rapidocr>=3.9.1",
    "rapidocr-onnxruntime>=1.4.4",
    "sqlalchemy>=2.0.51",
]
